# gecko-mcpay-api

./: .dockerignore  .env.example  .gitignore  .mcp.json  CLAUDE.md  Dockerfile  Dockerfile.agent  README.md  README_template.md  colosseum-crowdedness-report.md  docker-entrypoint-agent.sh  docker-entrypoint.sh  pyproject.toml
apps/cli/: pyproject.toml
apps/cli/src/gecko_cli/: __init__.py  _prompt.py  _render_compat.py  main.py  render.py
apps/cli/src/gecko_cli/commands/: __init__.py  advise.py  ask.py  classify.py  competitors_landscape.py  doctor.py  earnings.py  judges.py  memory.py  plan.py  precedents.py  project.py  pulse.py  refine.py  research.py  resume.py  route.py  scaffold.py  sources.py  sprint_review.py  wallet.py
apps/demo-agent/: README.md  pyproject.toml
apps/demo-agent/src/gecko_demo_agent/: __init__.py  main.py
audit_runs/: 2026-05-13-purge-log.json
contest_bot/: OPERATIONS.md  agent_api.py  agent_orchestrator.py  agent_store.py  api_models.py  arena_score.py  backtest_api.py  backtest_entry.py  backtest_strategy.py  basedbid_exec.py  bootstrap.py  bot_state.py  contest_scoreboard.py  contest_watchdog.py  fundamentals_oracle.py  gecko_safety.py  gecko_wrap.py  indicators.py  jto_breakout_gecko_gated_contest_bot.py  launch_active_universe.sh  launch_agent.sh  launch_contest.sh  launch_control_plane.sh  launch_setup_c.sh  launch_strategy.sh  llm_client.py  local_memory.py  local_panel.py  market_temp.py  net_flow.py  onchainos.py  pegana_feed.py  refresh_arena_board.py  refresh_market_temp.py  refresh_market_temp_cron.sh  restart_when_clean.sh  (+4 more)
(+1255 files in other folders)
