[project]
name = "gecko-cli"
version = "0.1.0"
description = "Gecko CLI — the `bb` and `gecko` commands. Wraps gecko-core."
requires-python = ">=3.11"
dependencies = [
    "gecko-core",
    "click>=8.1",
    "rich>=13.7",
    "python-dotenv>=1.0",
]

[project.scripts]
bb = "gecko_cli.main:main"
gecko = "gecko_cli.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/gecko_cli"]
