[project]
name = "gecko-demo-agent"
version = "0.1.0"
description = "Gecko demo agent — the on-stage script that calls gecko-api, handles x402, signs the payment, and retries. Reference shape for any third-party agent."
requires-python = ">=3.11"
dependencies = [
    "gecko-mcp",            # for wallet.get_keypair_for_signing
    "x402[svm]>=2.8.0",
    "httpx>=0.27",
    "click>=8.1",
]

[project.scripts]
gecko-demo-agent = "gecko_demo_agent.main:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/gecko_demo_agent"]
